--- a/inout2/templates/admin.jinja
+++ b/inout2/templates/admin.jinja
@@ -1,6 +1,6 @@
 {% extends "_main.jinja" %}
 
-{% block title %}Welcome {% endblock %}
+{% block title %}Admin {% endblock %}
 
 {% block main %}
 <article>
@@ -10,6 +10,21 @@
     <p>
         Admin.
     </p>
+    <ol class="todos">
+        <li>
+          <svg>
+            <circle cx="13" cy="14" r="10"></circle>
+          </svg>
+          <p>Lorem, ipsum dolor.</p>
+        </li>
+        <li>
+          <svg>
+            <circle cx="13" cy="14" r="10"></circle>
+          </svg>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+    </ol>
+
     <footer>no ta dobre</footer>
 </article>
 {% endblock %}
