add favicon and login form

--- a/inout2/templates/about.jinja
+++ b/inout2/templates/about.jinja
@@ -3,13 +3,25 @@
 {% block title %} About {% endblock %}
 
 {% block main %}
-<article>
-    <header>
-        Zacinam
-    </header>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, molestiae.
-    </p>
-    <footer>Koncim</footer>
-</article>
+<header>
+    Zacinam
+</header>
+<p>
+<ol class="todos">
+    <li>
+        <svg>
+            <circle cx="13" cy="14" r="10"></circle>
+        </svg>
+        <p>Lorem, ipsum dolor.</p>
+    </li>
+    <li>
+        <svg>
+            <circle cx="13" cy="14" r="10"></circle>
+        </svg>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </li>
+</ol>
+</p>
+
+<footer>Koncim</footer>
 {% endblock %}
