--- a/inout2/templates/admin.jinja
+++ b/inout2/templates/admin.jinja
@@ -3,28 +3,16 @@
 {% block title %}Admin {% endblock %}
 
 {% block main %}
-<article>
-    <header>
-        zeby
-    </header>
-    <p>
-        Admin.
-    </p>
-    <ol class="todos">
-        <li>
-          <svg>
-            <circle cx="13" cy="14" r="10"></circle>
-          </svg>
-          <p>Lorem, ipsum dolor.</p>
-        </li>
-        <li>
-          <svg>
-            <circle cx="13" cy="14" r="10"></circle>
-          </svg>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </li>
-    </ol>
+<header>
+    Login to Inout2
+</header>
+<p>
+<form>
+    <input type="text" placeholder="username/email" />
+    <input type="password" placeholder="password" />
+    <input type="submit" />
+</form>
+</p>
 
-    <footer>no ta dobre</footer>
-</article>
+<footer>no ta dobre</footer>
 {% endblock %}
