--- a/inout2/templates/index.html
+++ b/inout2/templates/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>InOut v2</title>
+    <link rel="icon" href="./../static/icon/favicon.ico" sizes="16x16"> 
+
     <link rel="stylesheet" href="./../static/css/normalize.css" />
     <link rel="stylesheet" href="./../static/css/app.css" />
     <link rel="stylesheet" href="./../static/css/sidebar.css" />
@@ -33,9 +35,13 @@
               ></path>
             </svg>
             <p>
+              Login
+              <span></span>
+            </p>
+            <!-- <p>
               Pavol Hudák
               <span>hudak.pavol@scheidt-bachmann.sk</span>
-            </p>
+            </p> -->
           </a>
         </section>
 
