--- a/inout2/static/css/sidebar.css
+++ b/inout2/static/css/sidebar.css
@@ -57,6 +57,7 @@ aside {
   
     width: 100%;
     padding: 0.5rem;
+    margin-bottom: 0.5rem;
   
     background: rgba(255, 255, 255, 0.5);
   
@@ -64,7 +65,7 @@ aside {
     border-left: 1px solid rgb(160, 175, 200);
     border-radius: 0.375rem;
   
-    display: none;
+    display: block;
   }
   
   input::placeholder {
@@ -73,7 +74,9 @@ aside {
     font-weight: normal;
   }
   
-  
+
+
+  /* PARKING LOTS */
   .lots {
     font-size: 1rem;
     line-height: 1rem;
@@ -96,8 +99,9 @@ aside {
     margin-top: 0.375rem;
   
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 0.5rem;
+    font-size: 0.9rem;
   }
   
   nav a {
