--- a/inout2/templates/_main.jinja
+++ b/inout2/templates/_main.jinja
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> {% block title %} {% endblock %} </title>
+    <link rel="icon" sizes="16x16" href="{{ url_for('static', filename='icon/favicon.ico') }}" > 
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/content.css') }}" />
@@ -33,16 +35,19 @@
             </form>
 
             <section class="user">
-                <a href="{{ url_for('view_admin') }}">
+                <a href="{{ url_for('login') }}">
                     <svg>
                         <path
                             d="M12.075,10.812c1.358-0.853,2.242-2.507,2.242-4.037c0-2.181-1.795-4.618-4.198-4.618S5.921,4.594,5.921,6.775c0,1.53,0.884,3.185,2.242,4.037c-3.222,0.865-5.6,3.807-5.6,7.298c0,0.23,0.189,0.42,0.42,0.42h14.273c0.23,0,0.42-0.189,0.42-0.42C17.676,14.619,15.297,11.677,12.075,10.812 M6.761,6.775c0-2.162,1.773-3.778,3.358-3.778s3.359,1.616,3.359,3.778c0,2.162-1.774,3.778-3.359,3.778S6.761,8.937,6.761,6.775 M3.415,17.69c0.218-3.51,3.142-6.297,6.704-6.297c3.562,0,6.486,2.787,6.705,6.297H3.415z">
                         </path>
                     </svg>
                     <p>
+                        Login
+                    </p>
+                    <!-- <p>
                         Pavol Hudák
                         <span>hudak.pavol@scheidt-bachmann.sk</span>
-                    </p>
+                    </p> -->
                 </a>
             </section>
 
