--- a/inout2/templates/admin.jinja
+++ b/inout2/templates/admin.jinja
@@ -3,6 +3,13 @@
 {% block title %}Admin {% endblock %}
 
 {% block main %}
+<div class="title">
+    <h1 class="today" id="p1">P1 Telecash</h1>
+    <h1 class="scheduled" id="p2">P2 Web2Pay</h1>
+    <h1 class="all" id="p3">P3 TrustCommerce</h1>
+    <h1 class="flagged" id="p4">P4 NMI</h1>
+</div>
+
 <header>
     Login to Inout2
 </header>
