--- a/inout2/templates/index.html
+++ b/inout2/templates/index.html
@@ -7,10 +7,10 @@
     <title>InOut v2</title>
     <link rel="icon" href="./../static/icon/favicon.ico" sizes="16x16"> 
 
-    <link rel="stylesheet" href="./../static/css/normalize.css" />
-    <link rel="stylesheet" href="./../static/css/app.css" />
-    <link rel="stylesheet" href="./../static/css/sidebar.css" />
-    <link rel="stylesheet" href="./../static/css/content.css" />
+    <link rel="stylesheet" type="text/css" href="./../static/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="./../static/css/app.css" />
+    <link rel="stylesheet" type="text/css" href="./../static/css/sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="./../static/css/content.css" />
 
     <script type="text/javascript" src="./../static/js/parking.js"></script>
   </head>
