--- a/inout2/static/css/welcome.css
+++ b/inout2/static/css/welcome.css
@@ -7,83 +7,89 @@ body {
   font-size: 18px;
   font-family: -apple-system, -system-ui, "Segoe UI", Roboto, Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  
-  /* background-image: linear-gradient(
+
+  background-image: linear-gradient(
     to right,
     rgb(206, 199, 224),
     rgb(172, 140, 142)
-  ); */
+  );
 
-  text-align: center;
   min-height: 100vh;
 
   display: flex;
   flex-direction: column;
 }
 
+/* WELCOME */
+.welcome {
+  font-size: 1rem;
+  line-height: 1rem;
 
-  /* LISTS */
-  .welcome {
-    width: 98vw;
-
-    font-size: 1rem;
-    line-height: 1rem;
-    font-weight: bold;
-  
-    margin-top: 0.5rem;
-    margin-bottom: 3rem;
-  }
-  
-  .welcome ol {
-    margin-left: 3rem;
-    display: flex;
-    justify-content: space-between;
-
-    background: rgba(255, 255, 255, 0.5);
-    border-radius: 0.5rem;
-  }
-  
-  .welcome a {
-    display: flex;
-    align-items: center;
-  
-    border-radius: 0.5rem;
-    padding: 0.375rem 0.375rem;
-    border: 1px solid black;
-  }
-  
-  .welcome a:hover,
-  .welcome a:active {
-    background-color: yellow;
-  }
-  
-  .welcome p {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    justify-content: space-between;
-  }
-  
-  .welcome p span{
-    font-weight: normal;
-    font-size: 0.7rem;
-  }
-  
-  .welcome svg {
-    width: 2.25rem;
-    height: 2.25rem;
-  
-    border-radius: 2.25rem;
-    stroke: black;
-    fill: black;
-  
-    padding: 0.5rem;
-  }
-  
-footer{
-  text-align: center;
+  margin: 2rem auto 3rem;
 }
-footer p{
+
+.welcome ol {
+  width: 87vw;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 0.5rem;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.welcome a {
+  display: flex;
+  align-items: center;
+
+  border-radius: 0.5rem;
+  padding: 0.375rem 0.375rem;
+}
+
+.welcome a:hover,
+.welcome a:active {
+  border: 1px solid black;
+}
+
+.welcome p {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+}
+
+.welcome p span {
+  font-weight: normal;
+  font-size: 0.7rem;
+}
+
+.welcome svg {
+  width: 2rem;
+  height: 2rem;
+
+  border-radius: 1rem;
+  border: 1px solid black;
+  stroke: black;
+  fill: black;
+
+  padding: 0.325rem;
+}
+
+/* ARTICLE */
+article {
+  width: 70vw;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+}
+
+article header {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+
+footer p {
   margin-top: 1.5rem;
   text-align: center;
 }
