--- a/inout2/templates/welcome.jinja
+++ b/inout2/templates/welcome.jinja
@@ -73,18 +73,17 @@
     </article>
 
     <footer>
-      <p>
-        <a href="#">About us</a>
-        |
-        <a href="#">Guides & Tutorials</a>
-        |
-        <a href="#">Status</a>
-        |
-        <a href="#">What's new</a>
-        |
-        <a href="mailto:udigeri@gmail.com">Email us</a>
+      <p class="bottom_nav">
+          <a href="#">About us</a>
+          <a href="#">Guides & Tutorials</a>
+          <a href="#">Status</a>
+          <a href="#">What's new</a>
+          <a href="mailto:udigeri@gmail.com" class="bottom_nav_end">Email us</a>
       </p>
-      <p>© 2022 Udi</p>
-    </footer>
+      <p class="copyright">
+          Copyright © 2022 Udi
+      </p>
+  </footer>
+
   </body>
 </html>
