--- a/inout2/templates/welcome.html
+++ b/inout2/templates/welcome.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inout2</title>
-    <link rel="icon" sizes="16x16" href="{{ url_for('static', filename='icon/favicon.ico') }}" > 
+    <title>Welcome</title>
+    <link rel="icon" sizes="16x16" href="./../static/icon/favicon.ico" > 
 
     <link rel="stylesheet" type="text/css" href="./../static/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="./../static/css/welcome.css" />
@@ -15,7 +15,7 @@
     <nav class="welcome">
         <ol>
             <li>
-                <a href="#">
+                <a href="welcome.html">
                     <svg>
                         <path d="M18.121,9.88l-7.832-7.836c-0.155-0.158-0.428-0.155-0.584,0L1.842,9.913c-0.262,0.263-0.073,0.705,0.292,0.705h2.069v7.042c0,0.227,0.187,0.414,0.414,0.414h3.725c0.228,0,0.414-0.188,0.414-0.414v-3.313h2.483v3.313c0,0.227,0.187,0.414,0.413,0.414h3.726c0.229,0,0.414-0.188,0.414-0.414v-7.042h2.068h0.004C18.331,10.617,18.389,10.146,18.121,9.88 M14.963,17.245h-2.896v-3.313c0-0.229-0.186-0.415-0.414-0.415H8.342c-0.228,0-0.414,0.187-0.414,0.415v3.313H5.032v-6.628h9.931V17.245z M3.133,9.79l6.864-6.868l6.867,6.868H3.133z"></path>
                     </svg>
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="login.html">
                     <svg>
                         <path d="M12.075,10.812c1.358-0.853,2.242-2.507,2.242-4.037c0-2.181-1.795-4.618-4.198-4.618S5.921,4.594,5.921,6.775c0,1.53,0.884,3.185,2.242,4.037c-3.222,0.865-5.6,3.807-5.6,7.298c0,0.23,0.189,0.42,0.42,0.42h14.273c0.23,0,0.42-0.189,0.42-0.42C17.676,14.619,15.297,11.677,12.075,10.812 M6.761,6.775c0-2.162,1.773-3.778,3.358-3.778s3.359,1.616,3.359,3.778c0,2.162-1.774,3.778-3.359,3.778S6.761,8.937,6.761,6.775 M3.415,17.69c0.218-3.51,3.142-6.297,6.704-6.297c3.562,0,6.486,2.787,6.705,6.297H3.415z"></path>
                     </svg>
@@ -46,7 +46,7 @@
 
         <p>
             Daco zmysluplne o Inout2
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dolores accusantium aliquid! Nihil sint voluptatum natus quis tenetur quia, exercitationem expedita omnis vero iure maiores obcaecati blanditiis, excepturi commodi numquam minus consectetur earum neque et possimus, perspiciatis laborum totam! Eum voluptatibus, obcaecati unde quo blanditiis animi aperiam impedit aliquam quis id maxime mollitia ad doloribus labore corrupti voluptatum doloremque eveniet. Est debitis doloremque laboriosam labore dolorem dignissimos officia minus, velit, deleniti esse soluta placeat. Doloremque voluptates, maxime rem repudiandae vel veritatis veniam dolor cupiditate corporis quos animi, voluptas magni porro maiores cum! Saepe, quis odit commodi ad iusto molestiae nostrum?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum modi harum, corporis repellat quas architecto facere laudantium. Eligendi neque expedita suscipit molestiae nihil non dignissimos culpa eius cum explicabo. Veniam unde velit delectus ad ipsa quidem quibusdam, ut maiores corrupti atque aperiam voluptates cumque eveniet eum modi, eius consectetur reprehenderit.
         </p>
 
         <footer>
@@ -55,19 +55,15 @@
     </article>
 
     <footer>
-        <p>
+        <p class="bottom_nav">
             <a href="#">About us</a>
-            |
             <a href="#">Guides & Tutorials</a>
-            |
             <a href="#">Status</a>
-            |
             <a href="#">What's new</a>
-            |
-            <a href="mailto:udigeri@gmail.com">Email us</a>
+            <a href="mailto:udigeri@gmail.com" class="bottom_nav_end">Email us</a>
         </p>
-        <p>
-            © 2022 Udi
+        <p class="copyright">
+            Copyright © 2022 Udi
         </p>
     </footer>
     
