--- a/inout2/templates/login.html
+++ b/inout2/templates/login.html
@@ -8,32 +8,22 @@
     <link rel="icon" sizes="16x16" href="./../static/icon/favicon.ico" > 
 
     <link rel="stylesheet" type="text/css" href="./../static/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="./../static/css/welcome.css" />
+    <link rel="stylesheet" type="text/css" href="./../static/css/login.css" />
 
 </head>
 <body>
     <div class="login_form">
+        <h2>Sign-in</h2>
         <form action="login.html" method="POST">
+            <p>Email</p>
             <input type="text" placeholder="email" name="email">
+            <p>Password</p>
             <input type="password" placeholder="password" name="password">
-            <input type="submit" value="Login">
+            <button>
+                <input type="submit" value="Sign-in">
+            </button>
         </form>
     </div>
-
-    <article>
-        <header>
-            Inout2 
-        </header>
-
-        <p>
-            Daco zmysluplne o Inout2
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum modi harum, corporis repellat quas architecto facere laudantium. Eligendi neque expedita suscipit molestiae nihil non dignissimos culpa eius cum explicabo. Veniam unde velit delectus ad ipsa quidem quibusdam, ut maiores corrupti atque aperiam voluptates cumque eveniet eum modi, eius consectetur reprehenderit.
-        </p>
-
-        <footer>
-            12.08.2022
-        </footer>
-    </article>
 
     <footer>
         <p class="bottom_nav">
