--- a/inout2/static/css/login.css
+++ b/inout2/static/css/login.css
@@ -23,22 +23,71 @@ body {
   padding: 0;
 }
 
-/* WELCOME */
+/* LOGIN */
 .login_form {
+
+  width: 30vw;
   font-size: 1rem;
   font-weight: bold;
   line-height: 1rem;
 
-  margin: 2.25rem auto 3rem;
+  margin: 3.25rem auto 3rem;
 }
 
+h2 {
+  font-size: 2rem;
+  display: block;
+  margin-bottom: 2rem;
+  text-align: center;
+  
+}
 
-.welcome p span {
+/* FORMS */
+form p {
+  margin-bottom: 0.5rem;
+}
+
+input {
+  width:100%;
+  color: black;
   font-weight: normal;
-  font-size: 0.75rem;
+
+  padding: 0.5rem;
+  margin: 0 auto;
+  margin-bottom: 0.5rem;
+  
+  background: rgba(255, 255, 255, 0.5);
+  
+  border-top: 2px solid rgb(160, 175, 230);
+  border-left: 2px solid rgb(160, 175, 230);
+  border-radius: 0.375rem;
+  
+  display: block;
 }
 
-.welcome svg {
+input::placeholder {
+  color: black;
+  opacity: 0.5;
+}
+
+button input{
+  display: flex;
+  width:100%;
+  color: black;
+  font-weight: bold;
+
+  padding: 0.5rem;
+  margin: 0 auto;
+  
+  border-top: 1px solid rgb(160, 175, 230);
+  border-left: 1px solid rgb(160, 175, 230);
+  border-radius: 0.375rem;
+
+  background-color: rgba(125, 125, 189, 0.5);
+  opacity: 0.8;
+}
+
+.login_form svg {
   width: 2.25rem;
   height: 2.25rem;
 
@@ -50,49 +99,25 @@ body {
   padding: 0.4rem;
 }
 
-/* ARTICLE */
-article {
-  width: 85vw;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-
-  font-size: 1rem;
-}
-
-article header {
-  font-size: 1.15rem;
-  font-weight: bold;
-}
-
-article p,
-article footer {
-  margin-top: 0.75rem;
-}
-
-article footer {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
 footer {
   font-family: "Arial Rounded MT Bold", "Nunito", sans-serif;
   width: 85vw;
   margin: 0 auto;
 }
 
-footer p.bottom_nav{
+footer p.bottom_nav {
   font-size: 1rem;
   margin-top: 1.5rem;
   text-align: center;
 }
 
-footer p.bottom_nav a{
+footer p.bottom_nav a {
   padding-right: 0.5rem;
   border-right: 2px solid rgba(0, 0, 0, 0.75);
 }
 
-footer p.bottom_nav a.bottom_nav_end{
-  border: none
+footer p.bottom_nav a.bottom_nav_end {
+  border: none;
 }
 
 footer p.copyright {
