--- a/inout2/templates/login.jinja
+++ b/inout2/templates/login.jinja
@@ -72,7 +72,7 @@
 
     <footer>
       <p class="bottom_nav">
-        <a href="#">About us</a>
+        <a href="{{ url_for('view_about') }}">About us</a>
         <a href="#">Guides & Tutorials</a>
         <a href="#">Status</a>
         <a href="#">What's new</a>
