--- a/inout2/templates/_main.jinja
+++ b/inout2/templates/_main.jinja
@@ -104,7 +104,7 @@
                 <h3>Parking lots</h3>
 
                 <nav>
-                    <a href="#" class="today" onclick="show_p1();">
+                    <a href="#" class="psp_telecash" onclick="show_p1();">
                         <p>
                             <svg>
                                 <path
@@ -117,7 +117,7 @@
                         Telecash
                     </a>
 
-                    <a href="#" class="scheduled" onclick="show_p2();">
+                    <a href="#" class="psp_web2pay" onclick="show_p2();">
                         <p>
                             <svg>
                                 <path
@@ -129,7 +129,7 @@
                         Web2Pay
                     </a>
 
-                    <a href="#" class="all" onclick="show_p3();">
+                    <a href="#" class="psp_trustcommerce" onclick="show_p3();">
                         <p>
                             <svg>
                                 <path
@@ -141,7 +141,7 @@
                         TrustCommerce
                     </a>
 
-                    <a href="#" class="flagged" onclick="show_p4();">
+                    <a href="#" class="psp_nmi" onclick="show_p4();">
                         <p>
                             <svg>
                                 <path
@@ -152,6 +152,19 @@
                         </p>
                         NMI
                     </a>
+
+                    <a href="#" class="psp_ccv" onclick="show_p5();">
+                        <p>
+                            <svg>
+                                <path
+                                    d="M10,1.375c-3.17,0-5.75,2.548-5.75,5.682c0,6.685,5.259,11.276,5.483,11.469c0.152,0.132,0.382,0.132,0.534,0c0.224-0.193,5.481-4.784,5.483-11.469C15.75,3.923,13.171,1.375,10,1.375 M10,17.653c-1.064-1.024-4.929-5.127-4.929-10.596c0-2.68,2.212-4.861,4.929-4.861s4.929,2.181,4.929,4.861C14.927,12.518,11.063,16.627,10,17.653 M10,3.839c-1.815,0-3.286,1.47-3.286,3.286s1.47,3.286,3.286,3.286s3.286-1.47,3.286-3.286S11.815,3.839,10,3.839 M10,9.589c-1.359,0-2.464-1.105-2.464-2.464S8.641,4.661,10,4.661s2.464,1.105,2.464,2.464S11.359,9.589,10,9.589">
+                                </path>
+                            </svg>
+                            <span>P5</span>
+                        </p>
+                        CCV
+                    </a>
+
                 </nav>
             </section>
 
