--- a/inout2/templates/about.jinja
+++ b/inout2/templates/about.jinja
@@ -4,10 +4,11 @@
 
 {% block main %}
 <div class="title">
-    <h1 class="today" id="p1">P1 Telecash</h1>
-    <h1 class="scheduled" id="p2">P2 Web2Pay</h1>
-    <h1 class="all" id="p3">P3 TrustCommerce</h1>
-    <h1 class="flagged" id="p4">P4 NMI</h1>
+    <h1 class="psp_telecash" id="p1">P1 Telecash</h1>
+    <h1 class="psp_web2pay" id="p2">P2 Web2Pay</h1>
+    <h1 class="psp_trustcommerce" id="p3">P3 TrustCommerce</h1>
+    <h1 class="psp_nmi" id="p4">P4 NMI</h1>
+    <h1 class="psp_ccv" id="p4">P5 CCV</h1>
 </div>
 
 <header>
