--- a/inout2/static/css/app.css
+++ b/inout2/static/css/app.css
@@ -1,12 +1,15 @@
 :root {
-  --color-today: 96, 165, 250;
-  --color-scheduled: 239, 68, 68;
   --color-all: 156, 163, 175;
-  --color-all-darker: 55, 65, 81;
-  --color-flagged: 245, 158, 11;
+  --color-psp-telecash: 255, 102, 0;
+  --color-psp-web2pay: 224, 2, 28;
+  --color-psp-trustcommerce: 2, 46, 96;
+  --color-psp-nmi: 100, 217, 164;
+  --color-psp-ccv: 0, 168, 232;
   --list-color-reminder: 239, 68, 68;
   --list-color-family: 186, 72, 221;
   --tags-color: 225, 230, 242;
+  --tags-all: 156, 163, 175;
+  --tokens-color: 156, 163, 175;
 }
 
 html {
