--- a/inout2/static/css/sidebar.css
+++ b/inout2/static/css/sidebar.css
@@ -115,24 +115,29 @@ aside {
     color: white;
   }
   
-  nav .today:hover,
-  nav .today:active {
-      background: rgb(var(--color-today));
+  nav .psp_telecash:hover,
+  nav .psp_telecash:active {
+      background: rgb(var(--color-psp-telecash));
   }
   
-  nav .scheduled:hover,
-  nav .scheduled:active {
-    background: rgb(var(--color-scheduled));
+  nav .psp_web2pay:hover,
+  nav .psp_web2pay:active {
+    background: rgb(var(--color-psp-web2pay));
   }
   
-  nav .all:hover,
-  nav .all:active {
-    background: rgb(var(--color-all-darker));
+  nav .psp_trustcommerce:hover,
+  nav .psp_trustcommerce:active {
+    background: rgb(var(--color-psp-trustcommerce));
   }
   
-  nav .flagged:hover,
-  nav .flagged:active {
-    background: rgb(var(--color-flagged));
+  nav .psp_nmi:hover,
+  nav .psp_nmi:active {
+    background: rgb(var(--color-psp-nmi));
+  }
+
+  nav .psp_ccv:hover,
+  nav .psp_ccv:active {
+    background: rgb(var(--color-psp-ccv));
   }
   /*  */
   nav p {
@@ -157,22 +162,26 @@ aside {
     line-height: 2.375rem;
   }
   
-  .today svg {
-    background-color: rgb(var(--color-today));
+  .psp_telecash svg {
+    background-color: rgb(var(--color-psp-telecash));
   }
   
-  .scheduled svg {
-    background-color: rgb(var(--color-scheduled));
+  .psp_web2pay svg {
+    background-color: rgb(var(--color-psp-web2pay));
   }
   
-  .all svg {
-    background-color: rgb(var(--color-all-darker));
+  .psp_trustcommerce svg {
+    background-color: rgb(var(--color-psp-trustcommerce));
   }
   
-  .flagged svg {
-    background-color: rgb(var(--color-flagged));
+  .psp_nmi svg {
+    background-color: rgb(var(--color-psp-nmi));
   }
   
+  .psp_ccv svg {
+    background-color: rgb(var(--color-psp-ccv));
+  }
+
   
   
   /* LISTS */
@@ -182,7 +191,7 @@ aside {
     font-weight: bold;
   
     margin-top: 0.375rem;
-    display: block;
+    display: none;
   }
   
   .lists h3 {
@@ -285,7 +294,7 @@ aside {
   
   .tags a:hover,
   .tags a:active {
-    background-color: rgb(var(--color-all));
+    background-color: rgb(var(--tags-all));
   }
   
   
@@ -320,7 +329,7 @@ aside {
   
   .tokens a:hover,
   .tokens a:active {
-    background-color: rgb(var(--color-all));
+    background-color: rgb(var(--tokens-color));
   }
   
   .tokens p {
