--- a/inout2/templates/welcome.jinja
+++ b/inout2/templates/welcome.jinja
@@ -68,7 +68,7 @@
       <header>Inout2</header>
 
       <p>
-        Daco zmysluplne o Inout2 Lorem ipsum dolor sit amet consectetur
+        Daco zmysluplne o Inout2 <br>Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Velit dolores accusantium aliquid! Nihil sint
         voluptatum natus quis tenetur quia, exercitationem expedita omnis vero
         iure maiores obcaecati blanditiis, excepturi commodi numquam minus
