--- a/inout2/static/css/login.css
+++ b/inout2/static/css/login.css
@@ -23,6 +23,27 @@ body {
   padding: 0;
 }
 
+.flashes {
+  padding: 0;
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+
+.flashes li {
+  list-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgray;
+  padding: 3px;
+  text-align: center;
+  background-color: lightgreen;
+}
+
+.flashes .alert {
+  background-color: mistyrose;
+}
+
 /* LOGIN */
 .login_form {
 
