--- a/inout2/templates/welcome.jinja
+++ b/inout2/templates/welcome.jinja
@@ -23,6 +23,16 @@
     />
   </head>
   <body>
+{% with messages = get_flashed_messages(with_categories=True) %}
+  {% if messages %}
+      <ul class="flashes">
+          {% for category, message in messages %}
+              <li class="{{ category }}"> {{ message }} </li>
+          {% endfor %}
+      </ul>
+  {% endif %}
+{% endwith %}
+
     <nav class="welcome">
       <ol>
         <li>
