--- a/inout2/templates/login.jinja
+++ b/inout2/templates/login.jinja
@@ -28,6 +28,17 @@
     />
   </head>
 
+{% with messages = get_flashed_messages(with_categories=True) %}
+  {% if messages %}
+      <ul class="flashes">
+          {% for category, message in messages %}
+              <li class="{{ category }}"> {{ message }} </li>
+          {% endfor %}
+      </ul>
+  {% endif %}
+{% endwith %}
+
+
   <body>
     <nav class="welcome">
       <ol>
