--- a/inout2/templates/admin.jinja
+++ b/inout2/templates/admin.jinja
@@ -18,7 +18,7 @@
 <form action="{{ url_for('login_user') }}" method="POST">
     <input type="text" placeholder="username" name="username" />
     <input type="password" placeholder="password" name="password" />
-    <input type="submit" />
+    <input type="submit" value="LogIn"/>
 </form>
 </p>
 
