Working with ORM for database

--- a/inout2/templates/admin.jinja
+++ b/inout2/templates/admin.jinja
@@ -22,5 +22,9 @@
 </form>
 </p>
 
+<p>
+    <a href="{{ url_for('view_users') }}">show users</a>
+    <a href="{{ url_for('add_user') }}">add user</a>
+</p>
 <footer>no ta dobre</footer>
 {% endblock %}
