--- a/inout2/templates/admin.jinja
+++ b/inout2/templates/admin.jinja
@@ -23,8 +23,10 @@
 </p>
 
 <p>
-    <a href="{{ url_for('view_users') }}">show users</a>
-    <a href="{{ url_for('add_user') }}">add user</a>
+    <a href="{{ url_for('view_tenants') }}">show tenants</a><br>
+    <a href="{{ url_for('view_users') }}">show users</a><br>
+    <a href="{{ url_for('add_user') }}">add user</a><br>
+
 </p>
 <footer>no ta dobre</footer>
 {% endblock %}
